Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17097

Debugger: "Load QML stack" feature appears to be dysfunctional

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 4.2.0-beta1
    • Qt Creator 4.2.0-beta1
    • Debugger
    • None
    • Windows/CDB
    • GDB cb7fb51313a6a3afa454b0266de5be32f2c404f3 (4.2, 12.10.2016) CDB: bb380a00f0ebcb04c618e5b4ec7a42ad9de78e20 , 5378aef691dbf5501cb98a5fdc3e078042bd0908 (4.2, 26.10.2016)

      It seems it is no longer working, "ERROR: Unable to obtain QML stack trace: JS ExecutionContext address not found in stack" is usually displayed (CDB).

      Fex, try to investigate QTBUG-56471 ; (debug and choose "Load QML stack" from the stack window context menu),

        For Gerrit Dashboard: QTCREATORBUG-17097
        # Subject Branch Project Status CR V

            hjk hjk
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes