CDB extension: Also look for QV4::ExecutionEngine for the QML stack

The struct has been renamed from QV4::ExecutionContext to
QV4::ExecutionEngine in Qt 5.7.

Task-number: QTCREATORBUG-17097
Change-Id: If9685d039d3d1f9caf369ec847ac6705747ae9f7
Reviewed-by: David Schulz <david.schulz@qt.io>